--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "يجبر إعادة تعيين كاميرا كل نقطة بداية",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "إيقاف المحفزات عند الموت",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "يوقف محفزات الحركة/الدوران عند الموت لترى ما الذي قتلك",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "قطع الأثر",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "يعيد إحياء خلل قطع الأثر",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "المعدل (x)",
