--- a/langs/de-CH.json
+++ b/langs/de-CH.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Zwingt s Zruggsetze fo de Kamera bi jedere Startposition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Deaktivier Trigger Wenn Stirbsch",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Stop d Move/Rotate Trigger wenn stirbsch, dass gsesch a was gstorbe besch",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Spuur Schniide",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Bringt de Spuur schniide Bug zrugg is Spiel",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
