--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Erzwingt ein Zurücksetzen der Kamera bei jeder StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Triggerstop beim Tod",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Move- und Rotation-Trigger werden bei Tod gestoppt, sodass die Todesursache klar ist",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Trail-Abschneidung",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Stellt einen alten Bug wieder her, bei dem der Trail abgeschnitten wird",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
