--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "General",
   "ICONIC/GLOW": "Glow",
   "ICONIC/OVERRIDE": "Override",
+  "ICONIC/RAND": "Randomiser",
   "ICONIC/VANILLA_PROGRESS_BAR": "Vanilla Progress Bar",
   "ICONIC/WAVE": "Wave",
   "ICONIC/PREVIEW/BASE_PARTICLES": "Base",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Force resets each StartPos's camera",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Stop Triggers on Death",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Stops move/rotation triggers on death so you can see what killed you",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "Icon Randomiser",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "Icons",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "Colours",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Trail Cutting",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Brings back the trail cutting bug",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Rate (x)",
