--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Fuerza el reinicio de la cámara de cada StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Detener Activadores al Morir",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Detiene los activadores de movimiento/rotación al morir pa' que veas qué te mató",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Corte de Estela",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Devuelve el bug de corte de estela",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Intervalo",
@@ -689,14 +693,13 @@
   "STATUS/BEST_RUN/ENABLED": "Mejor Intento",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Porcentaje preciso",
   "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "Solo desde % actual",
-  "STATUS/BEST_RUN/DROPDOWN/PREFIX": "Mostrar prefijo",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisión de Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefijo",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Muertes de Noclip",
   "STATUS/ATTEMPTS/ENABLED": "Intentos",
   "STATUS/JUMPS/ENABLED": "Saltos",
-  "STATUS/PERCENTAGE/ENABLED": "Porcentaje",
   "STATUS/LEVEL_TIME/ENABLED": "Tiempo de Nivel",
+  "STATUS/PERCENTAGE/ENABLED": "Porcentaje",
   "STATUS/CLOCK/ENABLED": "Reloj",
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 horas",
   "STATUS/FRAME/ENABLED": "Contador de fotogrmas",
