--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Pakotus nollaa jokaisen startposin kameran",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Lopeta Triggerit Kuolemassa",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Lopettaa move/rotate triggerit, jotta voit nähdä, mikä tappoi sinut",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Jäljen Leikkaaminen",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Tuo takaisin vanhan jäljen leikkaamisbugin",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
