--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Réinitialise la caméra pour chaque StartPos",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Arrêt Déclencheurs à la mort",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Arrête tous les déclencheurs de mouvement/rotation après une mort pour voir ce qui l'à causée",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Traînée découpée",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Réintroduit le bug de la traînée découpée",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Taux (x)",
