--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Athshocraíonn Force ceamara gach Staid Tosaigh",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Stopann Truicear Ar Bhás",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Stopann an t-aistriú nó spreagann rothlú tar éis bháis",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Gearradh Conaire",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Tugann sé ar ais an rian a ghearradh",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
