--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "강제로 각 스타트포스의 카메라를 재설정합니다.",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 정지",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 정지하여 사망 원인을 확인할 수 있습니다.",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "트레일 커팅",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "트레일 커팅 버그를 다시 가져옵니다.",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
