--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Återställer kameran vid StartPos",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Stoppa triggers vid död",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Stoppar rörelse- och rotationstriggers vid död så att man kan se vad som dödade en",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Spårklippning",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Återinför en gammal bug som klippte spåret bakom spelaren",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
