--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Đặt lại camera của mỗi StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Tắt trigger on death",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Tắt các trigger được kích hoạt lúc chết để bạn có thể xem nguyên nhân thua",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Trail đứt đoạn",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Kích hoạt bug đứt đoạn trail ở các bản trước",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tỷ lệ (x)",
