--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Σταματήστε τα ερεθίσματα στο θάνατο",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Διακόπτει τις σκανδάλες κίνησης/περιστροφής κατά τον θάνατο, ώστε να μπορείτε να δείτε τι σας σκότωσε",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Κοπή μονοπατιών",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Επαναφέρει το σφάλμα κοπής μονοπατιών",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
