--- a/langs/es-AR.json
+++ b/langs/es-AR.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Reinicia la cámara en cada start-pos",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Parar los triggers al morir",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Para los triggers de movimiento o rotación al morir, para que puedas ver qué te mató",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Cortar la cola",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Trae de vuelta el bug donde se corta la cola",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
