--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Fuerza el reinicio de la cámara de cada StartPos",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Pausar triggers al morir",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Pausar los triggers de movimiento/rotación al morir para ver cómo has muerto",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Corte de estela",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Restaura el bug del corte de estela",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tasa (x)",
