--- a/langs/et-EE.json
+++ b/langs/et-EE.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Sundimine lähtestab iga käivituskaamera",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Lõpeta Vallandajad Surmaga",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Peatab päästikute move/rotate, et saaksite näha, mis teid tappis",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Rööbastee Lõikamine",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Tooge tagasi vana tee lõikamise bugi",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
