--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "StartPos bakoitzaren kamera berrezartzeko behartzen du",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Hiltzean Trigger-ak Gelditu",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Hiltzean, mugitze/biratze trigger-ak gelditzen ditu, zer hildu zaitun ikusi ahal izateko",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Aztarna-Mozketa",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Aztarna-mozktetaren errorea bueltan ekartzen du",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tasa (x)",
