--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Az összes StartPosition kameraállását visszaállítja",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Triggerek a Halálnál",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Megállítja a Move és Rotate triggereket halálkor, hogy lehessen tudni, hogy haltál meg",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Vágott Nyomvonal",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Visszahozza a régi nyomvonal bug-ot",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
