--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Forza il reset della fotocamera di ogni StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Ferma Trigger Alla Morte",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Ferma i trigger di movimento/rotazione alla morte per vedere cosa ti ha ucciso",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Taglio Scia",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Riporta il bug del taglio della scia",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Frequenza",
