--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "各スタートポジションのカメラを強制リセットします",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "死亡時にトリガー停止",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "移動/回転トリガーを死亡時に停止させ、何に倒されたかを確認できます",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "トレイルカット",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "トレイルカットのバグを復活させます",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
