--- a/langs/kk-KZ.json
+++ b/langs/kk-KZ.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Әрбір бастапқы позиция камерасының параметрлерін қалпына келтіруге мәжбүр етеді",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Өлім Триггерлерін Тоқтау",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Өлген кезде қозғалысты тоқтатады/триггерлерді бұрады, осылайша сізді не өлтіріп жатқанын көре аласыз",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Трейл Кесу",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Трейлың үзілуімен қатені қайтарады",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
