--- a/langs/lt-LT.json
+++ b/langs/lt-LT.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Priverstinai atstato kiekvieno pradinio taško kameros poziciją",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Išjungti paleidiklius mirštant",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Išjungia judesio/sukimo paleidiklius mirties momentu kad galėtumėte pamatyti kas jus nužudė",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Uodegos Kapojimasis",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Sugrąžina uodegos kapojimosi iš senesnių žaidimo versijų",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
