--- a/langs/nl-NL.json
+++ b/langs/nl-NL.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Forceer een reset van de camera van elke StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Stop De Triggers Voor De Dood",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Stopt move/rotate triggers bij overlijden, zodat je kunt zien wat je heeft gedood",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Trail Snijden",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Brengt de trailcutting-bug terug",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
