--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Wymusza reset kamery dla każdego StartPosu",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Zatrzymaj Triggery Przy Śmierci",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Zatrzymuje triggery ruchu/obrotu przy śmierci, aby móc zobaczyć, co cię zabiło",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Ucinanie Trailu",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Przywraca bug przycinania trailu",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tempo (x)",
