--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Força a redefinição da câmera de cada StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Impedir Triggers na Morte",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Impede triggers de movimento/rotação na morte para que você possa ver o que o matou",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Corte da Trilha",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Traz de volta o bug de corte da trilha",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
