--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Обнуляет настройки камеры при игре со стартовых позиций",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Остановить триггеры при смерти",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Отключает все триггеры поворота и движения после смерти игрока",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Срезать след",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Возвращает ошибку обрезания следа",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Частота (х)",
