--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Her StartPos'un kamerasını sıfırlanmasını zorlar",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Ölünce Triggerlarını Durdur",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Ölünce hareket ve dönüş triggerlarını durdurur, böylece sizi neyin öldürdüğünü rahatca görebilirsiniz",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "İz Kesme",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "İz kesilmesini geri getirir",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Oran (x)",
