--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Скидує камеру на кожній стартовій позиції",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Деакт. тригерів після смерті",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Деактивує ефекти руху/повороту після смерті; допомагає краще побачити, від чого ви вмерли",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Зламаний трейл",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Повертає баг зі зламаним трейлом на високих значеннях FPS",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Частота (x)",
