--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "强制重置每个StartPos的相机",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "死亡时Stop triggers",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "死亡时Stop move和rotation triggers",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Trail Cutting",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Trail Cutting bug激情回归",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "速率(x)",
