--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -39,6 +39,7 @@
   "ICONIC/GENERAL": "",
   "ICONIC/GLOW": "",
   "ICONIC/OVERRIDE": "",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "",
   "ICONIC/WAVE": "",
   "ICONIC/PREVIEW/BASE_PARTICLES": "",
@@ -227,6 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "強制重置每個StartPos的相機",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "死亡時停足扳機",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "死亡時停足關卡內的移動扳機和迴轉扳機 (幫忙看你在哪或怎麼死)",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "尾跡斷斷續續",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "從新做出尾跡斷斷續續的缺陷",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
