--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -39,7 +39,7 @@
   "ICONIC/GENERAL": "General",
   "ICONIC/GLOW": "Glow",
   "ICONIC/OVERRIDE": "Sobreescribir",
-  "ICONIC/RAND": "",
+  "ICONIC/RAND": "Randomizador",
   "ICONIC/VANILLA_PROGRESS_BAR": "Barra de progreso vanilla",
   "ICONIC/WAVE": "Wave",
   "ICONIC/PREVIEW/BASE_PARTICLES": "Base",
@@ -228,9 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Fuerza el reinicio de la cámara de cada StartPos",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Pausar triggers al morir",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Pausar los triggers de movimiento/rotación al morir para ver cómo has muerto",
-  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "Randomizador de iconos",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "Iconos",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "Colores",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Corte de estela",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Restaura el bug del corte de estela",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tasa (x)",
