Update Italian translation
Not finished; idk how to save it to my acc and continue on my pc

--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -2,15 +2,15 @@
   "NX/COLOUR/B": "Blu",
   "NX/COLOUR/DROPDOWN/INPUT": "Colore Hex",
   "NX/COLOUR/G": "Verde",
-  "NX/COLOUR/H": "",
+  "NX/COLOUR/H": "Tonalità",
   "NX/COLOUR/INPUT": "Colore Hex",
   "NX/COLOUR/R": "Rosso",
-  "NX/COLOUR/S": "",
-  "NX/COLOUR/V": "",
+  "NX/COLOUR/S": "Saturazione",
+  "NX/COLOUR/V": "Luminosità",
   "NX/COLOUR/RESET": "Reimposta Colore",
   "NX/COMBO/EMPTY": "",
-  "NX/PICKER/EMPTY": "",
-  "NX/PICKER/INPUT": "",
+  "NX/PICKER/EMPTY": "Nessun file trovato...",
+  "NX/PICKER/INPUT": "Nome del File",
   "ERROR": "Errore",
   "ERROR/DISMISS": "Scarta",
   "ERROR/HACKPRO/CONFLICTING_RULESET": "",
@@ -18,7 +18,7 @@
   "ERROR/REPLAY/FILE_NOT_FOUND": "File non trovato",
   "ERROR/REPLAY/NO_INPUTS": "La macro non contiene input, impossibile continuare",
   "ERROR/STATUS/MAX_FIELDS": "",
-  "ERROR/LEVEL/NO_CBF": "",
+  "ERROR/LEVEL/NO_CBF": "Per favore installa la mod Click Between Frames su Geode",
   "MESSAGE": "Messaggio",
   "MESSAGE/OK": "OK",
   "MESSAGE/CANCEL": "Annulla",
@@ -27,34 +27,34 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Eseguire il log out da Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Log out eseguito con successo! Puoi usare Mega Hack fino al riavvio",
-  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
-  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "Sei sicuro di voler disabilitare ogni hack abilitata?",
+  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Per favore esci dallo strato-livello/editor prima di abilitare la modalità Schermo intero",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ci sono cambiamenti non salvati, procedere con lo svuotamento e creazione di una nuova?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Si vuole eliminare la macro selezionata?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertita con successo!",
-  "MESSAGE/REPLAY/SAVE": "",
+  "MESSAGE/REPLAY/SAVE": "Vuoi salvare i cambiamenti eseguiti alla macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Prima inserire un tasto",
-  "ICONIC/DISABLE": "",
-  "ICONIC/EFFECTS": "",
-  "ICONIC/GENERAL": "",
-  "ICONIC/GLOW": "",
-  "ICONIC/OVERRIDE": "",
-  "ICONIC/RAND": "",
-  "ICONIC/VANILLA_PROGRESS_BAR": "",
+  "ICONIC/DISABLE": "Disabilita",
+  "ICONIC/EFFECTS": "Effetti",
+  "ICONIC/GENERAL": "Generale",
+  "ICONIC/GLOW": "Incandescenza",
+  "ICONIC/OVERRIDE": "Sovrascrivi",
+  "ICONIC/RAND": "Randomizzatore",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Barra di progresso vanilla",
   "ICONIC/WAVE": "",
-  "ICONIC/PREVIEW/BASE_PARTICLES": "",
-  "ICONIC/PREVIEW/COL1": "",
-  "ICONIC/PREVIEW/COL2": "",
-  "ICONIC/PREVIEW/DASH_EFFECT": "",
-  "ICONIC/PREVIEW/DEATH_EFFECT": "",
-  "ICONIC/PREVIEW/EXTRA": "",
-  "ICONIC/PREVIEW/GHOST_TRAIL": "",
-  "ICONIC/PREVIEW/GLOW": "",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "Base",
+  "ICONIC/PREVIEW/COL1": "Colore 1",
+  "ICONIC/PREVIEW/COL2": "Colore 2",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Effetto Dash",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Effetto morte",
+  "ICONIC/PREVIEW/EXTRA": "Extra",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Scia fantasma",
+  "ICONIC/PREVIEW/GLOW": "Incandescenza",
   "ICONIC/PREVIEW/ICONS": "",
-  "ICONIC/PREVIEW/SHIP_FIRE": "",
-  "ICONIC/PREVIEW/TRAIL": "",
-  "ICONIC/PREVIEW/TRAIL_COL": "",
-  "ICONIC/PREVIEW/WAVE_TRAIL": "",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Effetto fuoco nave",
+  "ICONIC/PREVIEW/TRAIL": "Scia",
+  "ICONIC/PREVIEW/TRAIL_COL": "Colore scia",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "Scia Wave",
   "ICONIC/SPECIAL/SPEED/PRE": "",
   "ICONIC/SPECIAL/SPEED/SUF": "",
   "ICONIC/SPECIAL/PREVIEW": "",
@@ -66,7 +66,7 @@
   "HOME/LANGUAGE": "Lingua",
   "HOME/SEARCH/SEARCH": "Cerca",
   "HOME/SEARCH/AUTO_SELECT": "",
-  "HOME/RULESETS": "Set Regole",
+  "HOME/RULESETS": "Set di Regole",
   "HOME/RULESETS/SAFE_MODE": "Modalità Sicura",
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
