Update Korean translations for various icons

--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -39,7 +39,7 @@
   "ICONIC/GENERAL": "일반",
   "ICONIC/GLOW": "글로우",
   "ICONIC/OVERRIDE": "강제 적용",
-  "ICONIC/RAND": "",
+  "ICONIC/RAND": "랜덤화",
   "ICONIC/VANILLA_PROGRESS_BAR": "기본 재생 바",
   "ICONIC/WAVE": "웨이브",
   "ICONIC/PREVIEW/BASE_PARTICLES": "기본",
@@ -228,9 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "강제로 각 스타트포스의 카메라를 재설정합니다.",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 정지",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 정지하여 사망 원인을 확인할 수 있습니다.",
-  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "아이콘 랜덤화",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "아이콘",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "색상",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "트레일 커팅",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "트레일 커팅 버그를 다시 가져옵니다.",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
