--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -34,31 +34,31 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успешно сконвертирован! Вы можете найти его рядом с остальными макросами",
   "MESSAGE/REPLAY/SAVE": "Вы хотите сохранить изменения макроса?",
   "MESSAGE/KEYBINDS/EMPTY": "Пожалуйста, сначала введите горячую клавишу",
-  "ICONIC/DISABLE": "",
-  "ICONIC/EFFECTS": "",
-  "ICONIC/GENERAL": "",
-  "ICONIC/GLOW": "",
-  "ICONIC/OVERRIDE": "",
-  "ICONIC/RAND": "",
-  "ICONIC/VANILLA_PROGRESS_BAR": "",
-  "ICONIC/WAVE": "",
-  "ICONIC/PREVIEW/BASE_PARTICLES": "",
-  "ICONIC/PREVIEW/COL1": "",
-  "ICONIC/PREVIEW/COL2": "",
-  "ICONIC/PREVIEW/DASH_EFFECT": "",
-  "ICONIC/PREVIEW/DEATH_EFFECT": "",
-  "ICONIC/PREVIEW/EXTRA": "",
-  "ICONIC/PREVIEW/GHOST_TRAIL": "",
-  "ICONIC/PREVIEW/GLOW": "",
-  "ICONIC/PREVIEW/ICONS": "",
-  "ICONIC/PREVIEW/SHIP_FIRE": "",
-  "ICONIC/PREVIEW/TRAIL": "",
-  "ICONIC/PREVIEW/TRAIL_COL": "",
-  "ICONIC/PREVIEW/WAVE_TRAIL": "",
-  "ICONIC/SPECIAL/SPEED/PRE": "",
-  "ICONIC/SPECIAL/SPEED/SUF": "",
-  "ICONIC/SPECIAL/PREVIEW": "",
-  "ICONIC/SPECIAL/INVERTED": "",
+  "ICONIC/DISABLE": "Выключить",
+  "ICONIC/EFFECTS": "Эффекты",
+  "ICONIC/GENERAL": "Главное",
+  "ICONIC/GLOW": "Свечение",
+  "ICONIC/OVERRIDE": "Перезаписать",
+  "ICONIC/RAND": "Рандомайзер",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Ванильный прогресс бар",
+  "ICONIC/WAVE": "Волна",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "База",
+  "ICONIC/PREVIEW/COL1": "Цвет 1",
+  "ICONIC/PREVIEW/COL2": "Цвет 2",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Эффект деш-орбов",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Эффект смерти",
+  "ICONIC/PREVIEW/EXTRA": "Экстра",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Призрачный след",
+  "ICONIC/PREVIEW/GLOW": "Свечение",
+  "ICONIC/PREVIEW/ICONS": "Иконки",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Огонь корабля",
+  "ICONIC/PREVIEW/TRAIL": "След",
+  "ICONIC/PREVIEW/TRAIL_COL": "Цвет следа",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "След волны",
+  "ICONIC/SPECIAL/SPEED/PRE": "Скорость",
+  "ICONIC/SPECIAL/SPEED/SUF": "х",
+  "ICONIC/SPECIAL/PREVIEW": "Предпросмотр",
+  "ICONIC/SPECIAL/INVERTED": "Инвертировать",
   "GM_VAR/0060": "Мини-иконка по умолчанию",
   "GM_VAR/0061": "Переключить след паука",
   "GM_VAR/0062": "Переключить огни деш орбов",
@@ -228,9 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Обнуляет настройки камеры при игре со стартовых позиций",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Остановить триггеры при смерти",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Отключает все триггеры поворота и движения после смерти игрока",
-  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "Рандомайзер иконок",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "Иконки",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "Цвета",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Срезать след",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Возвращает ошибку обрезания следа",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Частота (х)",
