--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -465,20 +465,20 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " klatek",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Nieograniczona Długość Edytora",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Pokaż Ślad Hitboxów",
-  "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Pokazuje ślad, gdzie hitbox gracza przeszedł podczas próby. Wymaga 'Pokaż Hitboxy'",
+  "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Pokazuje ślad, gdzie hitbox gracza przeszedł podczas próby, wymaga 'Pokaż Hitboxy'",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Pokaż Trajektorię",
-  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Rysuje przewidywane ścieżki gracza przy ciągłym przytrzymaniu/zwolnieniu przycisku",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Rysuje przewidywane ścieżki gracza przy ciągłym przytrzymaniu/puszczeniu przycisku",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "Iteracje (stepy)",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "Iteracje",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "Grubość",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "Grubość",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "x",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Klasyczne Obliczenia",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Smart StartPos",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Portale Trybów",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Portale Szybkośći",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "Portale Size",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "Portale Mirror",
+  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Mądry StartPos",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Automatycznie ustawia tryb gry, prędkość, rozmiar i granicę dla StartPosu",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Ukryj Interfejs",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L": "Przycisk Lewy",
@@ -515,7 +515,7 @@
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Przezroczyste Listy",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Usuwa tło z widoku list",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktawy",
-  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "Oktawy",
+  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "Półtony",
   "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER": "Zmiana Tonacji",
   "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER/TIP": "Zmienia tonację muzyki tła",
   "UNIVERSAL/THREAD_PRIORITY/COMBO": "Priorytet",
@@ -529,16 +529,16 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/HACK_TRANSITION_CUSTOMISER": "Własne Przejścia",
   "UNIVERSAL/TRANSITION_CUSTOMISER/HACK_TRANSITION_CUSTOMISER/TIP": "Dostosuj czas i typ przejść między scenami",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO": "Wybierz Przejście",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/0": "Fade (domyślne)",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/1": "Cross Fade",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/2": "Fade (Lewy Dół)",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/3": "Fade (Dół)",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/4": "Fade (Prawa Góra)",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/5": "Fade (Góra)",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/6": "Flip Angular",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/7": "Flip X",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/8": "Flip Y",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/9": "Jump Zoom",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/0": "Zanikanie (domyślne)",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/1": "Zanikanie Krzyżowe",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/2": "Zanikanie (Lewy Dół)",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/3": "Zanikanie (Dół)",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/4": "Zanikanie (Prawa Góra)",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/5": "Zanikanie (Góra)",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/6": "Obróć Kątowo",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/7": "Przerzuć X",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/8": "Przerzuć Y",
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/9": "Przybliżanie Skokowe",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/10": "Wejście Z Dołu",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/11": "Wejście Z Lewej",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/12": "Wejście Z Prawej",
@@ -563,20 +563,20 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Czas (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Czas",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
-  "CHEAT_SAFETY": "",
-  "CHEAT_SAFETY/RULESET": "",
-  "CHEAT_SAFETY/DISABLE_CHEATS": "",
+  "CHEAT_SAFETY": "Bezpieczneństwo Oszustw",
+  "CHEAT_SAFETY/RULESET": "Ruleset",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "Wyłącz Oszustwa",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Tryb Bezpieczny",
-  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Włącza tryb bezpieczny tylko wtedy, gdy włączone są cheaty",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Włącza tryb bezpieczny tylko wtedy, gdy włączone są oszustwa",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Tryb Bezpieczny",
   "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Wyłącza postęp, ukańczanie i weryfikację poziomów",
   "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Popup Trybu Bezpiecznego",
-  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Ostrzega przed wejściem do poziomy gdy włączone są cheaty",
-  "INTERFACE": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
-  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
-  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Ostrzega przed wejściem do poziomu gdy włączone są oszustwa",
+  "INTERFACE": "Interfejs",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "Ukryj Oszustwa na Końcu",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Ukryj Ekstra na Końcu",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "Ukryj Śnieg",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Ukryj Iconic w Pauzie",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Włączony",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Globalnie spowalnia grę o podany mnożnik",
@@ -613,8 +613,8 @@
   "UTILITY": "Narzędzia",
   "UTILITY/CLICKS/P1": "Klik P1",
   "UTILITY/CLICKS/P2": "Klik P2",
-  "UTILITY/DEV_TOOLS": "",
-  "UTILITY/DEV_TOOLS/TIP": "",
+  "UTILITY/DEV_TOOLS": "Otwórz DevTools",
+  "UTILITY/DEV_TOOLS/TIP": "Otwiera DevTools, wymaga zainstalowanego moda",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Lewo",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Prawo",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Lewo",
@@ -634,7 +634,7 @@
   "SCREENSHOT": "Zrzut Ekranu",
   "SCREENSHOT/SCREENSHOT": "Zrzut Ekranu",
   "SCREENSHOT/SCREENSHOT/TIP": "Robi zrzut ekranu gry",
-  "SCREENSHOT/COMBO": "",
+  "SCREENSHOT/COMBO": "Tryb",
   "SCREENSHOT/COMBO/0": "Zapisz i kopiuj",
   "SCREENSHOT/COMBO/1": "Kopiuj do schowka",
   "SCREENSHOT/COMBO/2": "Zapisz do pliku",
@@ -679,20 +679,20 @@
   "STATUS/*/POSITION/3": "Prawy Dolny Róg",
   "STATUS/*/MOVE/DOWN": "Dół",
   "STATUS/*/MOVE/UP": "Góra",
-  "STATUS/*/PREFIX": "",
+  "STATUS/*/PREFIX": "Pokaż Prefiks",
   "STATUS/*/UNITS": "Pokaż jednostki",
   "STATUS/MESSAGE/ENABLED": "Wiadomość",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Wiadomość",
-  "STATUS/TESTMODE/ENABLED": "Testmode",
-  "STATUS/CHEAT_INDICATOR/ENABLED": "Wzkaźnik Cheatów",
-  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
+  "STATUS/TESTMODE/ENABLED": "Tryb Testowy",
+  "STATUS/CHEAT_INDICATOR/ENABLED": "Wzkaźnik Oszustw",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "Ukryj gdy Brak Oszustw",
   "STATUS/FPS/ENABLED": "Licznik FPS",
   "STATUS/CPS/ENABLED": "Licznik CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Pokaż maksimum",
   "STATUS/CPS/DROPDOWN/TOTAL": "Pokaż łączne",
   "STATUS/BEST_RUN/ENABLED": "Najlepsza Próba",
-  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
-  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Dokładny Procent",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "Tylko z Aktualnego %",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Dokładność Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Pokaż prefiks",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Śmierci Noclip",
@@ -705,21 +705,21 @@
   "STATUS/FRAME/ENABLED": "Licznik Klatek",
   "STATUS/POSITION/ENABLED": "Pozycja",
   "STATUS/REPLAY_STATE/ENABLED": "Status Replay",
-  "STATUS/SESSION_TIME/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "Czas Sesji",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Zaznacz Makro",
   "REPLAY/OPEN": "Otwórz Makro",
   "REPLAY/SAVE": "Zapisz Makro",
   "REPLAY/DELETE": "Usuń Makro",
-  "REPLAY/STATE/RECORD": "Nagrywanie",
-  "REPLAY/STATE/PLAY": "Odtwarzanie",
-  "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "Auto Zapis",
+  "REPLAY/STATE/RECORD": "Nagraj",
+  "REPLAY/STATE/PLAY": "Odtwórz",
+  "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "Automatyczne Zapisywanie",
   "REPLAY/SAVE_LAYOUT/SAVE": "Zapisz",
   "REPLAY/END_LAYOUT/CLEAR": "Wyczyść i Utwórz Nowy",
   "REPLAY/END_LAYOUT/DELETE": "Usuń",
-  "REPLAY/GAMEPLAY": "Opcje Gameplay'u",
-  "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Losowość",
-  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
+  "REPLAY/GAMEPLAY": "Opcje Trybu Gry",
+  "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Pozwól na Losowość",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "Blokuj Wejścia",
   "REPLAY/CONVERT": "Konwertuj (.json, .gdr)",
   "REPLAY/NONE": "Nie Zaznaczono"
 }
