--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -38,8 +38,8 @@
   "ICONIC/EFFECTS": "Efektuak",
   "ICONIC/GENERAL": "Orokorra",
   "ICONIC/GLOW": "Distira",
-  "ICONIC/RAND": "",
   "ICONIC/OVERRIDE": "Indargabetu",
+  "ICONIC/RAND": "",
   "ICONIC/VANILLA_PROGRESS_BAR": "Jatorrizko Aurrerapen-Barra",
   "ICONIC/WAVE": "Wave",
   "ICONIC/PREVIEW/BASE_PARTICLES": "Oinarria",
@@ -677,6 +677,8 @@
   "STATUS/*/POSITION/1": "Goi-Eskuina",
   "STATUS/*/POSITION/2": "Behe-Ezkerra",
   "STATUS/*/POSITION/3": "Behe-Eskuina",
+  "STATUS/*/POSITION/4": "",
+  "STATUS/*/POSITION/5": "",
   "STATUS/*/MOVE/DOWN": "Behera",
   "STATUS/*/MOVE/UP": "Gora",
   "STATUS/*/PREFIX": "Aurrizkia Erakutsi",
