--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -677,6 +677,8 @@
   "STATUS/*/POSITION/1": "",
   "STATUS/*/POSITION/2": "",
   "STATUS/*/POSITION/3": "",
+  "STATUS/*/POSITION/4": "",
+  "STATUS/*/POSITION/5": "",
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
   "STATUS/*/PREFIX": "",
